<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background" >

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="419dp"
        android:layout_height="272dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/txt_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="409dp"
        android:layout_height="113dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/baby_care_makes_n_tracking_your_child_s_n_development_easy_and_fun"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="14dp"
        android:background="#FFBB86FC"
        android:text="@string/start_tracking"
        android:textColor="#272424"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_description"
        app:layout_constraintVertical_bias="0.209" />

    <ImageView
        android:id="@+id/image_banner"
        android:layout_width="441dp"
        android:layout_height="121dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_logo"
        app:srcCompat="@drawable/banner"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>