<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBabyActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="411dp"
        android:layout_height="63dp"
        android:background="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Add a Baby"
        android:textAlignment="center"
        android:textColor="#100F0F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/editTxt_Name"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/baby_s_name"
        android:textColor="#2C2B2B"
        app:layout_constraintBottom_toTopOf="@+id/editTxt_BDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTxt_BDate"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="date"
        android:text="Date of Birth*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="374dp"
        android:layout_height="52dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_addbaby_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.889">

        <CheckBox
            android:id="@+id/checkbox_boy"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textColor="#100F0F"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="50dp"
            android:text="@string/boy"
            android:textColor="#151515" />

        <CheckBox
            android:id="@+id/checkbox_girl"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textColor="#171616" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="50dp"
            android:text="@string/girl"
            android:textColor="#151515" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="312dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="37dp"
        android:text="@string/required"
        android:textColor="#151515"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/btn_addbaby_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="533dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="51dp"
        android:text="done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="151dp"
        android:layout_height="141dp"
        app:layout_constraintBottom_toTopOf="@+id/editTxt_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/baby"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="373dp"
        android:layout_height="47dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="16dp"
        android:text="@string/select_one"
        android:textColor="#1E1D1D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_addbaby_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxt_BDate"
        app:layout_constraintVertical_bias="0.237"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>