<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="166dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/height"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:paddingTop="20dp"
                    android:text="@string/height_tracker"
                    android:textAlignment="center"
                    android:textColor="#090909"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:background="@color/white"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/editText_Height"
        android:layout_width="345dp"
        android:layout_height="68dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/height_in_cm"
        app:layout_constraintBottom_toTopOf="@+id/text_height_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <Button
        android:id="@+id/btn_height_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_height_back"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_height_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text_height_comment"
        android:layout_width="416dp"
        android:layout_height="67dp"
        android:background="#94B4CD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:text="Age"
        android:textSize="20dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/text_height_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Height"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_Years"
        android:layout_width="149dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="62dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Years"
        app:layout_constraintBottom_toTopOf="@+id/text_height_comment"
        app:layout_constraintEnd_toStartOf="@+id/editText_Months"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText_Months"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="62dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Months"
        app:layout_constraintBottom_toTopOf="@+id/text_height_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

